day6: id & class selectors, txtalign, txtdeco, txtline, txtshadow

--- a/notes/css/l13externalstyle.css
+++ b/notes/css/l13externalstyle.css
@@ -9,7 +9,25 @@ h4, h5, h6 {
     color: steelblue;
 }
 
+/* ID Selector */
+#myself {
+    color: violet;
+}
 
+#family, #th, #la {
+    color: blue;
+    font-size: 20px;
+}
+
+/* Class Selector */
+.phone {
+    color: red;
+    /* font-size: 30px; */
+}
+
+.fontlg {
+    font-size: 30px;
+}
 
 /* 
 CSS မှာ selector အမျိုးအစား ၃ခု ရှိတယ်။
