day14: system & custom variable/property

--- a/notes/css/l21float.css
+++ b/notes/css/l21float.css
@@ -15,7 +15,8 @@ hypen 2ခုနဲ့ ကြေငြာရမယ် reason သူတို့ 
 }
 
 .div1 {
-    width: 100px;
+    --wth: 100px;
+    width: var(--wth);
     height: 100px;
     background-color: var(--red);
 
